Some small fixes to better align to the design.

--- a/meet-landing-page/css/style.css
+++ b/meet-landing-page/css/style.css
@@ -53,6 +53,7 @@ body {
     font-weight: var(--font-weight-medium);
     font-style: normal;
     margin: 48px 0px 0px 0px;
+    background-color: var(--off-white);
 }
 
 img {
@@ -117,7 +118,6 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .hero {
